Fixing bug 391777. Make window.close() work on a modal content dialogs. r+sr+a=jonas@sicking.cc